Bug 387659, popup coordinates are not set within popupshowing event,r=eli,sr=bz